--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -168,3 +168,11 @@
     }
   }
 }
+
+.alert {
+  @apply bg-orange-100 border-l-4 border-orange-500 text-orange-700 p-4;
+
+  & .alert-header {
+    @apply font-bold;
+  }
+}
